--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
                 </ul>
             </nav>
         </header>
+        <!--Main content-->
+        <main>
+            <div id="banner">
+                <img id="banner-img" src="/images/backgroung_image.jpg" alt="Images de fonds d'ecran">
+                <div id="banner-content">
+                    <img src="/images/logo_long.png" alt="logo entreprise">
+                    <h1>Agence de graphisme</h1>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
