--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </header>
         <!--Main content-->
         <main>
+            <!--Banner-->-->
             <div id="banner">
                 <img id="banner-img" src="/images/backgroung_image.jpg" alt="Images de fonds d'ecran">
                 <div id="banner-content">
@@ -31,6 +32,34 @@
                     <h1>Agence de graphisme</h1>
                 </div>
             </div>
+            <!--Section présentation-->
+            <section id="presentation">
+                <p id="presentation-description">Mon petit e hfef kzerv erovn erv erovp  vjperv eerv re   gfr  e 
+                </p>
+                <section id="information">
+                    <article>
+                        <img src="/images/graphic-design.png" alt="graphique">
+                        <h2>GRAPHISME</h2>
+                        <p>Deu seuter oef e etktjr eifejf ef ef e </p>
+                    </article>
+                    <article>
+                        <img src="/images/strategie.png" alt="statégie">
+                        <h2>STRATEGIE</h2>
+                        <p>Deu seuter oef e etktjr eifejf ef ef e </p>
+                    </article>
+                    <article>
+                        <img src="/images/illustrations.png" alt="graphique">
+                        <h2>ILLUSTRATIONS</h2>
+                        <p>Deu seuter oef e etktjr eifejf ef ef e </p>
+                    </article>
+                </section>
+                <SECTion id="quote">
+                    <article>
+                        <blockquote id="quote-content">vbuoe erg ierv ergi eriv j erjv hàervjezhv eràg erjvàre jverh verv hreovh erjvre vjrehv erh ver vjhierh voer vhier </p>
+                        <p id="quote-author"> LECORNU Sébastien</p>
+                    </article>
+                </SECTion>
+            </section>
         </main>
     </body>
 </html>
