--- a/index.html
+++ b/index.html
@@ -61,5 +61,37 @@
                 </SECTion>
             </section>
         </main>
+        <!--Footer-->
+        <footer>
+            <h2>petite description fjre oireg ergjerpjvrej pojver ve r</h2>
+            <div id="footer-social">
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+            <div id="footer-items">
+                <div class="footer-item">
+                    <h3>Acces</h3>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer-item">
+                    <h3>Acces</h3>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer-item">
+                    <h3>Acces</h3>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
